--- a/src/App.scss
+++ b/src/App.scss
@@ -14,14 +14,14 @@
     	width: 20%;
     	height: 100%;
     	position: fixed;
-    	border: 1px solid red;
+    	--border: 1px solid red;
 
     }
     .admin__main{
     	margin-left: 20%;	
     	width: 80%;
     	height: 700px;
-    	border: 1px solid black;
+    	--border: 1px solid black;
     	
     }
     
