--- a/src/features/khoi/khoi.scss
+++ b/src/features/khoi/khoi.scss
@@ -10,6 +10,7 @@
         .right {
             width: 70%;
             margin-left: 30px;
+            height: 250px;
 
             .list {
                 background-color: #fff;
