--- a/src/features/subject/subject.scss
+++ b/src/features/subject/subject.scss
@@ -47,7 +47,7 @@
             background-color: #fff;
             padding: 10px 20px;
             border-radius: 5px;
-            ;
+            height: 250px;
 
             form {
                 .control {
