--- a/src/components/student/student.scss
+++ b/src/components/student/student.scss
@@ -8,7 +8,8 @@
     .page-trang-chu,
     .page-de-thi,
     .page-ki-thi,
-    .page-nhom {
+    .page-nhom,
+    .page-thi {
         width: 85%;
         margin: 0 auto;
         --height: 1000px;
