--- a/src/components/teach/cau-hoi/components/css/cau-hoi.scss
+++ b/src/components/teach/cau-hoi/components/css/cau-hoi.scss
@@ -33,4 +33,14 @@
     }
 
     padding-bottom: 10px;
+
+    .import-phuong-an {
+        .import-phuong-an-control {
+            display: flex;
+        }
+
+        .dap-an {
+            font-weight: bold;
+        }
+    }
 }
