--- a/src/components/teach/ki-thi/components/css/ki-thi.scss
+++ b/src/components/teach/ki-thi/components/css/ki-thi.scss
@@ -23,6 +23,48 @@
             width: 100px;
             font-weight: bold;
         }
+
+        position: relative;
+
+        .doi-mk {
+            position: absolute;
+            right: 0;
+            font-size: 12px;
+            font-style: italic;
+
+            &:hover {
+                text-decoration: underline;
+            }
+        }
+
+        input {
+            border: none;
+            background-color: #fff;
+
+            &:focus {
+                outline: none;
+            }
+        }
+
+        .da-thi,
+        .dang-thi,
+        .chua-thi {
+            border-radius: 4px;
+            width: 70px;
+        }
+
+        .da-thi {
+            background-color: lightseagreen;
+        }
+
+        .dang-thi {
+            background-color: lightyellow;
+        }
+
+        .chua-thi {
+            background-color: lightsalmon;
+        }
+
     }
 
     position: relative;
@@ -31,6 +73,7 @@
         position: absolute;
         right: 20px;
         display: none;
+        z-index: 1;
     }
 
     &:hover .remove {
