--- a/src/App.scss
+++ b/src/App.scss
@@ -81,9 +81,9 @@
 
     .active {
       --display: none;
-      color: red;
+      --color: red;
 
-      background-color: red;
+      --background-color: red;
     }
 
     .control-dropdown {}
