--- a/src/components/teach/components/css/cauhoi.scss
+++ b/src/components/teach/components/css/cauhoi.scss
@@ -17,6 +17,21 @@
             .stt {
                 width: 60px;
             }
+
+            .remove1 {
+                width: 20px;
+                position: absolute;
+                right: 20px;
+                display: none;
+
+                &:hover {
+                    cursor: pointer;
+                }
+            }
+        }
+
+        &:hover .remove1 {
+            display: block;
         }
 
 
